--- a/expérience.html
+++ b/expérience.html
@@ -45,5 +45,5 @@
         <p> - analyse d'état actuelle avec proposition d'une solution pour controler l'humidité et temperature </p>
         <p> - connaitre le role de chaque département de la société</p>
         <p> - détecter,analyser et resoudre les problemes</p>
-        <a href= "file:///C:/Users/mahdi/OneDrive/Bureau/mini%20projet/contact.html" >page suivante : contact </a>
+        <a href= "contact.html" >page suivante : contact </a>
 </section>
