--- a/page 1.html
+++ b/page 1.html
@@ -22,7 +22,7 @@
     <p>Arabe : maternelle</p>
     <p>Francais : avancée </p>
     <p>Anglais : intermédiaire</p>
-    <a href= "file:///C:/Users/mahdi/OneDrive/Bureau/mini%20projet/parcours.html" > page suivant : parcours </a>
+    <a href= "parcours.html" > page suivant : parcours </a>
 
 </body>
 </html>
