--- a/parcours.html
+++ b/parcours.html
@@ -37,6 +37,6 @@
         <img src="iset.webp" width="250px" alt="Mahdi's Photo">
         
     </section>
-    <a href= "file:///C:/Users/mahdi/OneDrive/Bureau/mini%20projet/exp%C3%A9rience.html" >page suivante : expérience </a>
+    <a href= "expérience.html" >page suivante : expérience </a>
 </body>
 </html>
