--- a/contact.html
+++ b/contact.html
@@ -32,6 +32,6 @@
         <input type="text" id="name" required minlength="4" maxlength="30" size="20"><br><br>
         <label for="comment"> message  </label>
         <textarea name="comment" id="comment" cols="30" rows="5"></textarea><br>
-        <a href= "file:///C:/Users/mahdi/OneDrive/Bureau/mini%20projet/page%201.html" > Retour </a>
+        <a href= "page 1.html" > Retour </a>
 
 </section>
