--- a/parcours.html
+++ b/parcours.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parcours</title>
+    <link rel="stylesheet" href="parcours.css">
     <style>
         body {
             font-family: Arial, sans-serif;
