--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>index.html</title>
-    <link rel="stylesheet" href="index.html">
+    <title>page1 - Page 1</title>
+    <link rel="stylesheet" href="page1.css">
 </head>
 <body>
 
