--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>contact.css</title>
+    <title>contact</title>
     <link rel="stylesheet" href="contact.css">
 
     <style>
@@ -34,6 +34,6 @@
         <input type="text" id="name" required minlength="4" maxlength="30" size="20"><br><br>
         <label for="comment"> message  </label>
         <textarea name="comment" id="comment" cols="30" rows="5"></textarea><br>
-        <a href ="index.css"> Retour </a>
+        <a href ="index.html"> Retour </a>
 
 </section>
